[package]
name = "wasmer-derive-unc"
version = "2.4.1"
description = "Wasmer derive macros"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
license = "MIT"
edition = "2018"

[lib]
proc-macro = true
name = "wasmer_derive"

[dependencies]
syn = { version = "1.0.72", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1.0.0"

[dev-dependencies]
wasmer = { path = "../api", version = "=2.4.1", package = "wasmer-unc" }
compiletest_rs = "0.6"
